--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,14 @@
   </build>
 
   <dependencies>
+  
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <version>5.0.0</version>
       <scope>provided</scope>
     </dependency>
+    
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.faces</artifactId>
@@ -51,10 +53,44 @@
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
       <version>3.0.0</version>
     </dependency>
+    
     <dependency>
       <groupId>org.jboss.weld.servlet</groupId>
       <artifactId>weld-servlet-core</artifactId>
       <version>4.0.2.Final</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>11.0.0</version>
+      <classifier>jakarta</classifier>
+    </dependency>
+<!-- Für Datenbankanbindung benötigt: Hibernate & MySQL -->    
+    <dependency>
+  	  <groupId>org.hibernate</groupId>
+  	  <artifactId>hibernate-core</artifactId>
+  	  <version>5.6.15.Final</version>
+	</dependency>
+	
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+	</dependency>
+	
+	 <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>2.2</version>
+    </dependency>
+    
+<!-- Für weld in Tomcat-->
+    <dependency>
+  		<groupId>org.jboss.weld.servlet</groupId>
+  		<artifactId>weld-servlet-shaded</artifactId>
+  		<version>4.0.2.Final</version>
+		</dependency>
+	
   </dependencies>
 </project>
